Basic Index and Solver
Basic index, added a list of projects.
Added a link to pokesolver.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <h1>Colin Nelson's Projects</h1>
+    <p>Hosted in GitHub pages</p>
+    <h1><u>Projects</u></h1>
+    <ul>
+        <li><a href="/projects/pokesolver.html">Poke Egg Solver</a></li>
+    </ul>
 </body>
 </html>
